# users

./: Cargo.toml
entities/: Cargo.toml  login_sessions.rs
entities/src/: lib.rs  login_sessions.rs  mod.rs  pending_registries.rs  prelude.rs  user.rs  users.rs
errors/: Cargo.toml
errors/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_users_table.rs  m20220726_113009_create_login_session.rs  main.rs
migrations/: Cargo.toml
migrations/src/: lib.rs  m20220101_000001_create_users_table.rs  m20220726_113009_create_login_session.rs  m20230602_040241_create_pending_registry.rs  main.rs
proto/: Cargo.toml  build.rs  users.proto
proto/src/: lib.rs
proto/src/v1/: auth.proto  permissions.proto  users.proto
src/: main.rs
src/api/: mod.rs
src/api/v1/: auth.rs  users.rs
src/db/: config.rs
src/middlewares/: app_data.rs  mod.rs
src/utils/: mod.rs
