[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
civilization = { path = "../../civilization" }
rand = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
users_entities = { path = "./entities" }
ip2location = "0.3"
tonic = { workspace = true }
prost = { workspace = true }
tonic-web = { workspace = true }
users_proto = { path = "./proto", features = ["server"]}
hyper = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
