[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
rand = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-web = { workspace = true }
hyper = { workspace = true }
futures = { workspace = true }
tower = { workspace = true }
civilization = { workspace = true }
users_entities = { workspace = true }
users_proto = { workspace = true, features = ["server"]}
users_errors = { workspace = true }
beijing = { workspace = true }
fancy-regex = { workspace = true }
ip2location = "0.3"
parking_lot = "0.12.1"
