[package]
name = "users_migrations"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "users_migrations"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"]}
sea-orm-migration = { version = "0.11", features = ["sqlx-postgres", "runtime-tokio-rustls"] }